--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "graphql": "^16.9.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "react": "^18",
